# EngenhariaSulLTDAEmails

./: .gitignore  Cargo.toml  README.md
examples/: CERIM646.html
migrations/2022-06-08-144828_Ocorrencia/: down.sql  up.sql
modelos/: tabela.html
src/: config_info.rs  error.rs  main.rs  message_builder.rs  models.rs  schema.rs  templating.rs  utilities.rs
src/db/: chunks.rs  mod.rs  models.rs  query.rs  schema.rs
src/io/: mod.rs  send_email.rs
templates/: base.html
